# Protocol

./: .gitignore  BUILD.bazel  README.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
defs/: proto.bzl
ocp/: BUILD.bazel
ocp/accounting/: BUILD.bazel
ocp/base/: BUILD.bazel  ProductKey.proto
ocp/catalog/: BUILD.bazel  Catalog.proto  Policy.proto  PolicyKey.proto
ocp/commerce/: BUILD.bazel  Customer.proto  Delivery.proto  Order.proto  Purchase.proto
ocp/commerce/payments/: BUILD.bazel
ocp/contact/: BUILD.bazel  ContactInfo.proto
ocp/content/: BUILD.bazel  Brand.proto  Content.proto  MaterialsData.proto  ProductContent.proto
ocp/core/: BUILD.bazel
ocp/crypto/: BUILD.bazel  Signature.proto
ocp/crypto/primitives/: BUILD.bazel
ocp/device/: BUILD.bazel
ocp/geo/: BUILD.bazel  Geohash.proto  Location.proto  Point.proto
ocp/geo/usa/ca/: BUILD.bazel
ocp/inventory/: BUILD.bazel  InventoryLocation.proto  InventoryProduct.proto
ocp/inventory/rfid/: BUILD.bazel  LLRP.proto
ocp/media/: BUILD.bazel  MediaItem.proto  MediaKey.proto
ocp/oauth/: BUILD.bazel
ocp/person/: BUILD.bazel  Person.proto  PersonName.proto
ocp/products/: BUILD.bazel  Extract.proto  Flower.proto  SKU.proto
ocp/products/distribution/: BUILD.bazel
ocp/products/menu/: BUILD.bazel  Menu.proto
ocp/proximity/: BUILD.bazel
ocp/regulatory/usa/ca/: BUILD.bazel
ocp/structs/: BUILD.bazel  Genetics.proto
ocp/structs/labtesting/: BUILD.bazel  TestResults.proto
ocp/structs/pricing/: BUILD.bazel  PricingDescriptor.proto
ocp/temporal/: BUILD.bazel  Schedule.proto
opencannabis/: BUILD.bazel
opencannabis/accounting/: BUILD.bazel
opencannabis/base/: BUILD.bazel
opencannabis/catalog/: BUILD.bazel  Catalog.proto  Policy.proto  PolicyKey.proto
opencannabis/commerce/: BUILD.bazel  Delivery.proto  Discounts.proto  Item.proto
opencannabis/commerce/payments/: BUILD.bazel
opencannabis/contact/: BUILD.bazel  EmailAddress.proto  PhoneNumber.proto  Website.proto
opencannabis/content/: BUILD.bazel  Brand.proto  Content.proto
opencannabis/core/: BUILD.bazel
opencannabis/crypto/: BUILD.bazel  Container.proto  Signature.proto
opencannabis/crypto/primitives/: BUILD.bazel
opencannabis/device/: BUILD.bazel  Device.proto
opencannabis/geo/: Address.proto  BUILD.bazel  Distance.proto  Geohash.proto  Location.proto
opencannabis/geo/usa/ca/: BUILD.bazel
opencannabis/inventory/: BUILD.bazel  InventoryLocation.proto  InventoryProduct.proto
opencannabis/inventory/rfid/: BUILD.bazel  LLRP.proto
opencannabis/media/: BUILD.bazel  MediaItem.proto  MediaKey.proto
opencannabis/oauth/: BUILD.bazel  Client.proto
opencannabis/person/: BUILD.bazel  Person.proto  PersonName.proto
opencannabis/products/: BUILD.bazel  Cartridge.proto  Flower.proto  SKU.proto
opencannabis/products/distribution/: BUILD.bazel
opencannabis/products/menu/: BUILD.bazel  Menu.proto
opencannabis/proximity/: BUILD.bazel
opencannabis/regulatory/usa/ca/: BUILD.bazel
opencannabis/structs/: BUILD.bazel
opencannabis/structs/labtesting/: BUILD.bazel
opencannabis/structs/pricing/: BUILD.bazel
opencannabis/temporal/: BUILD.bazel  Date.proto  Duration.proto  Interval.proto  Schedule.proto
sources/: BUILD.bazel
sources/accounting/: BUILD.bazel  Taxes.proto
sources/base/: BUILD.bazel  ProductKey.proto
sources/commerce/: BUILD.bazel  Customer.proto  Order.proto  Purchase.proto
sources/commerce/payments/: BUILD.bazel
sources/contact/: BUILD.bazel  ContactInfo.proto
sources/content/: BUILD.bazel  Colors.proto  Content.proto  ProductContent.proto
sources/core/: BUILD.bazel
sources/crypto/: BUILD.bazel
sources/crypto/primitives/: BUILD.bazel  Keys.proto
sources/device/: BUILD.bazel
sources/geo/: BUILD.bazel  Point.proto  Province.proto
sources/geo/usa/ca/: BUILD.bazel
sources/inventory/: BUILD.bazel
sources/inventory/rfid/: BUILD.bazel  RFID.proto
sources/media/: BUILD.bazel  MediaItem.proto  MediaType.proto
sources/oauth/: BUILD.bazel
sources/person/: BUILD.bazel  Person.proto
sources/products/: Apothecary.proto  BUILD.bazel  Edible.proto  Flower.proto  Merchandise.proto  Plant.proto  Preroll.proto  SKU.proto
sources/products/distribution/: BUILD.bazel
sources/products/menu/: BUILD.bazel  Menu.proto  Section.proto
sources/proximity/: BUILD.bazel  BluetoothBeacon.proto
sources/regulatory/usa/ca/: BUILD.bazel
sources/structs/: BUILD.bazel  Version.proto
sources/structs/labtesting/: BUILD.bazel  TestValue.proto
sources/structs/pricing/: BUILD.bazel  SaleDescriptor.proto
sources/temporal/: BUILD.bazel  Instant.proto  Schedule.proto  Timehash.proto
