
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "module")


alias(name = "opencannabis.accounting",
      actual = "//ocp/accounting:opencannabis.accounting")

alias(name = "opencannabis.base",
      actual = "//ocp/base:opencannabis.base")

alias(name = "opencannabis.commerce",
      actual = "//ocp/commerce:opencannabis.commerce")

alias(name = "opencannabis.catalog",
      actual = "//ocp/catalog:opencannabis.catalog")

alias(name = "opencannabis.contact",
      actual = "//ocp/contact:opencannabis.contact")

alias(name = "opencannabis.content",
      actual = "//ocp/content:opencannabis.content")

alias(name = "opencannabis.core",
      actual = "//ocp/core:opencannabis.core")

alias(name = "opencannabis.crypto",
      actual = "//ocp/crypto:opencannabis.crypto")

alias(name = "opencannabis.device",
      actual = "//ocp/device:opencannabis.device")

alias(name = "opencannabis.geo",
      actual = "//ocp/geo:opencannabis.geo")

alias(name = "opencannabis.inventory",
      actual = "//ocp/inventory:opencannabis.inventory")

alias(name = "opencannabis.media",
      actual = "//ocp/media:opencannabis.media")

alias(name = "opencannabis.oauth",
      actual = "//ocp/oauth:opencannabis.oauth")

alias(name = "opencannabis.person",
      actual = "//ocp/person:opencannabis.person")

alias(name = "opencannabis.products",
      actual = "//ocp/products:opencannabis.products")

alias(name = "opencannabis.proximity",
      actual = "//ocp/proximity:opencannabis.proximity")

alias(name = "opencannabis.regulatory",
      actual = "//ocp/regulatory:opencannabis.regulatory")

alias(name = "opencannabis.structs",
      actual = "//ocp/structs:opencannabis.structs")

alias(name = "opencannabis.temporal",
      actual = "//ocp/temporal:opencannabis.temporal")


## OpenCannabis: Models
module(
    name = "OpenCannabis",
    deps = [
        ":opencannabis.accounting",
        ":opencannabis.base",
        ":opencannabis.commerce",
        ":opencannabis.catalog",
        ":opencannabis.contact",
        ":opencannabis.content",
        ":opencannabis.core",
        ":opencannabis.crypto",
        ":opencannabis.device",
        ":opencannabis.geo",
        ":opencannabis.inventory",
        ":opencannabis.media",
        ":opencannabis.oauth",
        ":opencannabis.person",
        ":opencannabis.products",
        ":opencannabis.proximity",
        ":opencannabis.regulatory",
        ":opencannabis.structs",
        ":opencannabis.temporal"],
    strip_import_prefix = "/ocp")
