
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "module")


alias(name = "opencannabis.accounting",
      actual = "//sources/accounting:opencannabis.accounting")

alias(name = "opencannabis.base",
      actual = "//sources/base:opencannabis.base")

alias(name = "opencannabis.commerce",
      actual = "//sources/commerce:opencannabis.commerce")

alias(name = "opencannabis.contact",
      actual = "//sources/contact:opencannabis.contact")

alias(name = "opencannabis.content",
      actual = "//sources/content:opencannabis.content")

alias(name = "opencannabis.core",
      actual = "//sources/core:opencannabis.core")

alias(name = "opencannabis.crypto",
      actual = "//sources/crypto:opencannabis.crypto")

alias(name = "opencannabis.device",
      actual = "//sources/device:opencannabis.device")

alias(name = "opencannabis.geo",
      actual = "//sources/geo:opencannabis.geo")

alias(name = "opencannabis.inventory",
      actual = "//sources/inventory:opencannabis.inventory")

alias(name = "opencannabis.media",
      actual = "//sources/media:opencannabis.media")

alias(name = "opencannabis.oauth",
      actual = "//sources/oauth:opencannabis.oauth")

alias(name = "opencannabis.person",
      actual = "//sources/person:opencannabis.person")

alias(name = "opencannabis.products",
      actual = "//sources/products:opencannabis.products")

alias(name = "opencannabis.proximity",
      actual = "//sources/proximity:opencannabis.proximity")

alias(name = "opencannabis.regulatory",
      actual = "//sources/regulatory:opencannabis.regulatory")

alias(name = "opencannabis.structs",
      actual = "//sources/structs:opencannabis.structs")

alias(name = "opencannabis.temporal",
      actual = "//sources/temporal:opencannabis.temporal")


## OpenCannabis: Models
module(
    name = "OpenCannabis",
    deps = [
        ":opencannabis.accounting",
        ":opencannabis.base",
        ":opencannabis.commerce",
        ":opencannabis.contact",
        ":opencannabis.content",
        ":opencannabis.core",
        ":opencannabis.crypto",
        ":opencannabis.device",
        ":opencannabis.geo",
        ":opencannabis.inventory",
        ":opencannabis.media",
        ":opencannabis.oauth",
        ":opencannabis.person",
        ":opencannabis.products",
        ":opencannabis.proximity",
        ":opencannabis.regulatory",
        ":opencannabis.structs",
        ":opencannabis.temporal"],
    strip_import_prefix = "/sources")
