
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


## Accounting
proto(
    name = "Taxes",
    srcs = ["Taxes.proto"],
    deps = [
        "//ocp/geo:Province",
        "//ocp/geo:Country"],
    strip_import_prefix = "/ocp")


module(
    name = "opencannabis.accounting",
    deps = [
        ":Taxes"],
    strip_import_prefix = "/ocp")
