
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


## Base
proto(
    name = "Compression",
    srcs = ["Compression.proto"],
    strip_import_prefix = "/ocp")

proto(
    name = "Language",
    srcs = ["Language.proto"],
    strip_import_prefix = "/ocp")

proto(
    name = "ProductKind",
    srcs = ["ProductKind.proto"],
    strip_import_prefix = "/ocp")

proto(
    name = "ProductKey",
    srcs = ["ProductKey.proto"],
    deps = [
        ":ProductKind",
        "//ocp/content:Name",
        "//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")


module(
    name = "opencannabis.base",
    deps = [
        ":Compression",
        ":Language",
        ":ProductKey",
        ":ProductKind"],
    strip_import_prefix = "/ocp")
