
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


# Menus
proto(
    name = "Catalog",
    srcs = ["Catalog.proto"],
    deps = [
        "//ocp/core:Datamodel",
        "//sources/private/models/partner:BrandKey",
        "//sources/private/models/creative:CreativeKey",
        "//ocp/base:ProductKey",
        "//ocp/media:MediaKey",
        "//ocp/temporal:Instant",
        "//ocp/products:Apothecary",
        "//ocp/products:Cartridge",
        "//ocp/products:Edible",
        "//ocp/products:Extract",
        "//ocp/products:Flower",
        "//ocp/products:Merchandise",
        "//ocp/products:Plant",
        "//ocp/products:Preroll",
        "//ocp/products:SKU",
        "//ocp/products/menu:Menu",
        "//ocp/crypto/primitives:Integrity",
        "@com_google_protobuf//:field_mask_proto"],
    strip_import_prefix = "/ocp")

proto(
    name = "Policy",
    srcs = ["Policy.proto"],
    deps = [
        ":PolicyKey",
        "//ocp/core:Datamodel",
        "//ocp/base:ProductKind",
        "//ocp/temporal:Instant",
        "//sources/private/models/identity:UserKey",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:struct_proto"],
    strip_import_prefix = "/ocp")

proto(
    name = "PolicyKey",
    srcs = ["PolicyKey.proto"],
    deps = [
        "//ocp/core:Datamodel",
        "//sources/private/models/partner:BrandKey",
        "//sources/private/models/partner:PartnerKey",
        "//sources/private/models/partner:LocationKey"],
    strip_import_prefix = "/ocp")


module(
    name = "opencannabis.catalog",
    deps = [":Catalog", ":Policy", ":PolicyKey"],
    strip_import_prefix = "/ocp")
