
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


# Commerce
proto(
    name = "Currency",
    srcs = ["Currency.proto"],
    strip_import_prefix = "/ocp")

proto(
    name = "Customer",
    srcs = ["Customer.proto"],
    deps = [
        "//ocp/person:Person",
        "//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "Delivery",
    srcs = ["Delivery.proto"],
    deps = [
        "//ocp/geo:Address",
        "//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "Discounts",
    srcs = ["Discounts.proto"],
    deps = ["//ocp/temporal:Instant"],
    strip_import_prefix = "/ocp")

proto(
    name = "Item",
    srcs = ["Item.proto"],
    deps = [
        "//ocp/base:ProductKey",
        "//ocp/structs/pricing:PricingDescriptor"],
    strip_import_prefix = "/ocp")

proto(
    name = "Order",
    srcs = ["Order.proto"],
    deps = [
        ":Item",
        ":Delivery",
        ":Customer",
        "//ocp/commerce/payments:Payment",
        "//ocp/temporal:Instant",
        "//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "Purchase",
    srcs = ["Purchase.proto"],
    deps = [
        ":Item",
        ":Currency",
        ":Discounts",
        "//ocp/core:Datamodel",
        "//ocp/accounting:Taxes",
        "//ocp/crypto:Signature",
        "//ocp/commerce/payments:Payment",
        "//ocp/inventory:InventoryProduct",
        "//ocp/temporal:Instant"],
    strip_import_prefix = "/ocp")


module(
    name = "opencannabis.commerce",
    deps = [
        ":Currency",
        ":Customer",
        ":Delivery",
        ":Discounts",
        ":Item",
        ":Order",
        ":Purchase",
        "//ocp/commerce/payments:opencannabis.commerce.payments"],
    strip_import_prefix = "/ocp")
