
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


## Partner
proto(
    name = "EmailAddress",
    srcs = ["EmailAddress.proto"],
    deps = ["//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "PhoneNumber",
    srcs = ["PhoneNumber.proto"],
    deps = ["//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "Website",
    srcs = ["Website.proto"],
    deps = ["//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "ContactInfo",
    srcs = ["ContactInfo.proto"],
    deps = [
        ":PhoneNumber",
        ":EmailAddress",
        ":Website",
        "//ocp/geo:Location",
        "//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")


module(
    name = "opencannabis.contact",
    deps = [
        ":EmailAddress",
        ":PhoneNumber",
        ":Website",
        ":ContactInfo"],
    strip_import_prefix = "/ocp")
