
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


## Content
proto(
    name = "Name",
    srcs = ["Name.proto"],
    strip_import_prefix = "/ocp")

proto(
    name = "Colors",
    srcs = ["Colors.proto"],
    strip_import_prefix = "/ocp")

proto(
    name = "Content",
    srcs = ["Content.proto"],
    deps = [
        "//ocp/core:Datamodel",
        "//ocp/base:Language",
        "//ocp/base:Compression"],
    strip_import_prefix = "/ocp")

proto(
    name = "Data",
    srcs = ["Data.proto"],
    strip_import_prefix = "/ocp")

proto(
    name = "MaterialsData",
    srcs = ["MaterialsData.proto"],
    deps = [
        "//ocp/structs:Grow",
        "//ocp/structs:Shelf",
        "//ocp/structs:Species",
        "//ocp/structs:Genetics",
        "//ocp/products/distribution:DistributionChannel"],
    strip_import_prefix = "/ocp")

proto(
    name = "Brand",
    srcs = ["Brand.proto"],
    deps = [
            "//ocp/content:Name",
            "//ocp/content:Colors",
            "//ocp/content:Content",
            "//ocp/media:MediaKey"],
    strip_import_prefix = "/ocp")

proto(
    name = "ProductContent",
    srcs = ["ProductContent.proto"],
    deps = [
        ":Name",
        ":Brand",
        ":Content",
        "//ocp/media:MediaKey",
        "//ocp/structs:ProductFlags",
        "//ocp/temporal:Instant",
        "//ocp/structs/pricing:PricingDescriptor",
        "//ocp/structs/labtesting:TestResults",
        "//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")


module(
    name = "opencannabis.content",
    deps = [
        ":Name",
        ":Colors",
        ":Content",
        ":Data",
        ":MaterialsData",
        ":Brand",
        ":ProductContent"],
    strip_import_prefix = "/ocp")
