
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


# Cryptography
proto(
    name = "Signature",
    srcs = ["Signature.proto"],
    deps = [
        "//ocp/crypto/primitives:Keys",
        "//ocp/crypto/primitives:Integrity"],
    strip_import_prefix = "/ocp")

proto(
    name = "Container",
    srcs = ["Container.proto"],
    deps = [
        "//ocp/base:Compression",
        "//ocp/content:Content",
        "//ocp/crypto/primitives:Keys",
        "//ocp/crypto/primitives:Integrity"],
    strip_import_prefix = "/ocp")


module(
    name = "opencannabis.crypto",
    deps = [
        ":Signature",
        ":Container",
        "//ocp/crypto/primitives:opencannabis.crypto.primitives"],
    strip_import_prefix = "/ocp")
