
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


## Device
proto(
    name = "Device",
    srcs = ["Device.proto"],
    deps = ["//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")



module(
    name = "opencannabis.device",
    deps = [":Device"],
    strip_import_prefix = "/ocp")
