
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


## Geography
proto(
    name = "Address",
    srcs = ["Address.proto"],
    deps = ["//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "Country",
    srcs = ["Country.proto"],
    deps = ["//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "Distance",
    srcs = ["Distance.proto"],
    deps = ["//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "Geohash",
    srcs = ["Geohash.proto"],
    deps = [
        ":Distance",
        "//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "Point",
    srcs = ["Point.proto"],
    deps = [
        ":Distance",
        "//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "Location",
    srcs = ["Location.proto"],
    deps = [
        ":Address",
        ":Point",
        ":Distance",
        "//ocp/content:Name",
        "//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "USState",
    srcs = ["USState.proto"],
    strip_import_prefix = "/ocp")

proto(
    name = "Province",
    srcs = ["Province.proto"],
    deps = [":USState"],
    strip_import_prefix = "/ocp")


module(
    name = "opencannabis.geo",
    deps = [
        ":Address",
        ":Country",
        ":Distance",
        ":Geohash",
        ":Point",
        ":Location",
        ":USState",
        ":Province",
        "//ocp/geo/usa/ca:opencannabis.geo.usa.ca"],
    strip_import_prefix = "/ocp")
