
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


# Inventory
proto(
    name = "InventoryProduct",
    srcs = ["InventoryProduct.proto"],
    deps = [
        "//ocp/core:Datamodel",
        "//ocp/base:ProductKey",
        "//ocp/temporal:Instant",
        "//ocp/commerce:Item",
        "//ocp/products/menu:Menu",
        "//ocp/structs/pricing:PricingDescriptor"],
    strip_import_prefix = "/ocp")

proto(
    name = "InventoryLocation",
    srcs = ["InventoryLocation.proto"],
    deps = [
        ":InventoryProduct",
        "//ocp/core:Datamodel",
        "//ocp/contact:ContactInfo"],
    strip_import_prefix = "/ocp")


module(
    name = "opencannabis.inventory",
    deps = [
        ":InventoryProduct",
        ":InventoryLocation",
        "//ocp/inventory/rfid:opencannabis.inventory.rfid"],
    strip_import_prefix = "/ocp")
