
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


## Media
proto(
    name = "MediaOrientation",
    srcs = ["MediaOrientation.proto"],
    deps = ["//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "MediaType",
    srcs = ["MediaType.proto"],
    deps = ["//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "MediaKey",
    srcs = ["MediaKey.proto"],
    deps = [
        ":MediaType",
        "//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "MediaItem",
    srcs = ["MediaItem.proto"],
    deps = [
        ":MediaKey",
        ":MediaType",
        "//ocp/base:ProductKey",
        "//ocp/temporal:Instant",
        "//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")


module(
    name = "opencannabis.media",
    deps = [
        ":MediaOrientation",
        ":MediaType",
        ":MediaKey",
        ":MediaItem"],
    strip_import_prefix = "/ocp")
