
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


# OAuth
proto(
    name = "AuthorizationScope",
    srcs = ["AuthorizationScope.proto"],
    strip_import_prefix = "/ocp")

proto(
    name = "Client",
    srcs = ["Client.proto"],
    deps = [
        ":AuthorizationScope",
        "//ocp/media:MediaItem",
        "//ocp/temporal:Instant"],
    strip_import_prefix = "/ocp")


module(
    name = "opencannabis.oauth",
    deps = [
        ":AuthorizationScope",
        ":Client"],
    strip_import_prefix = "/ocp")
