
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


# Person
proto(
    name = "PersonName",
    srcs = ["PersonName.proto"],
    deps = ["//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "Person",
    srcs = ["Person.proto"],
    deps = [
        ":PersonName",
        "//ocp/contact:ContactInfo",
        "//ocp/temporal:Date",
        "//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")


module(
    name = "opencannabis.person",
    deps = [
        ":PersonName",
        ":Person"],
    strip_import_prefix = "/ocp")
