
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


# Products
proto(
    name = "Apothecary",
    srcs = ["Apothecary.proto"],
    deps = [
        "//ocp/base:ProductKey",
        "//ocp/content:MaterialsData",
        "//ocp/content:ProductContent"],
    strip_import_prefix = "/ocp")

proto(
    name = "Cartridge",
    srcs = ["Cartridge.proto"],
    deps = [
        "//ocp/base:ProductKey",
        "//ocp/content:MaterialsData",
        "//ocp/content:ProductContent"],
    strip_import_prefix = "/ocp")

proto(
    name = "Edible",
    srcs = ["Edible.proto"],
    deps = [
        "//ocp/base:ProductKey",
        "//ocp/content:MaterialsData",
        "//ocp/content:ProductContent"],
    strip_import_prefix = "/ocp")

proto(
    name = "Extract",
    srcs = ["Extract.proto"],
    deps = [
        "//ocp/base:ProductKey",
        "//ocp/content:MaterialsData",
        "//ocp/content:ProductContent"],
    strip_import_prefix = "/ocp")

proto(
    name = "Flower",
    srcs = ["Flower.proto"],
    deps = [
        "//ocp/core:Datamodel",
        "//ocp/base:ProductKey",
        "//ocp/content:MaterialsData",
        "//ocp/content:ProductContent"],
    strip_import_prefix = "/ocp")

proto(
    name = "Merchandise",
    srcs = ["Merchandise.proto"],
    deps = [
        "//ocp/base:ProductKey",
        "//ocp/content:ProductContent"],
    strip_import_prefix = "/ocp")

proto(
    name = "Plant",
    srcs = ["Plant.proto"],
    deps = [
        "//ocp/base:ProductKey",
        "//ocp/content:MaterialsData",
        "//ocp/content:ProductContent"],
    strip_import_prefix = "/ocp")

proto(
    name = "Preroll",
    srcs = ["Preroll.proto"],
    deps = [
        "//ocp/base:ProductKey",
        "//ocp/content:MaterialsData",
        "//ocp/content:ProductContent"],
    strip_import_prefix = "/ocp")

proto(
    name = "SKU",
    srcs = ["SKU.proto"],
    deps = [
        "//sources/private/models/partner/integrations:IntegrationSettings",
        "//ocp/commerce:Item",
        "//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")


module(
    name = "opencannabis.products",
    deps = [
        ":Apothecary",
        ":Cartridge",
        ":Edible",
        ":Extract",
        ":Flower",
        ":Merchandise",
        ":Plant",
        ":Preroll",
        ":SKU",
        "//ocp/products/distribution:opencannabis.products.distribution",
        "//ocp/products/menu:opencannabis.products.menu"],
    strip_import_prefix = "/ocp")
