
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


# Proximity
proto(
    name = "BluetoothBeacon",
    srcs = ["BluetoothBeacon.proto"],
    deps = [
        "//ocp/geo:Location",
        "//ocp/geo:Distance",
        "//ocp/temporal:Instant"],
    strip_import_prefix = "/ocp")


module(
    name = "opencannabis.proximity",
    deps = [":BluetoothBeacon"],
    strip_import_prefix = "/ocp")
