
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


# Structs
proto(
    name = "Genetics",
    srcs = ["Genetics.proto"],
    deps = ["//ocp/base:ProductKey"],
    strip_import_prefix = "/ocp")

proto(
    name = "Grow",
    srcs = ["Grow.proto"],
    strip_import_prefix = "/ocp")

proto(
    name = "ProductFlags",
    srcs = ["ProductFlags.proto"],
    strip_import_prefix = "/ocp")

proto(
    name = "Shelf",
    srcs = ["Shelf.proto"],
    strip_import_prefix = "/ocp")

proto(
    name = "Species",
    srcs = ["Species.proto"],
    strip_import_prefix = "/ocp")

proto(
    name = "Version",
    srcs = ["Version.proto"],
    deps = ["//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")


module(
    name = "opencannabis.structs",
    deps = [
        ":Genetics",
        ":Grow",
        ":ProductFlags",
        ":Shelf",
        ":Species",
        ":Version",
        "//ocp/structs/labtesting:opencannabis.structs.labtesting",
        "//ocp/structs/pricing:opencannabis.structs.pricing"],
    strip_import_prefix = "/ocp")
