
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


## Temporal
proto(
    name = "Date",
    srcs = ["Date.proto"],
    deps = ["//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "Duration",
    srcs = ["Duration.proto"],
    deps = ["//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "Instant",
    srcs = ["Instant.proto"],
    deps = ["//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "Interval",
    srcs = ["Interval.proto"],
    deps = ["//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "Time",
    srcs = ["Time.proto"],
    strip_import_prefix = "/ocp")

proto(
    name = "Schedule",
    srcs = ["Schedule.proto"],
    deps = [
        ":Time",
        ":Instant",
        ":Interval",
        "//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")

proto(
    name = "Timehash",
    srcs = ["Timehash.proto"],
    deps = ["//ocp/core:Datamodel"],
    strip_import_prefix = "/ocp")


module(
    name = "opencannabis.temporal",
    deps = [
        ":Date",
        ":Duration",
        ":Instant",
        ":Interval",
        ":Time",
        ":Schedule",
        ":Timehash"],
    strip_import_prefix = "/ocp")
