
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


# Menus
proto(
    name = "Catalog",
    srcs = ["Catalog.proto"],
    deps = [
        "//opencannabiscore:Datamodel",
        "//sources/private/models/partner:BrandKey",
        "//sources/private/models/creative:CreativeKey",
        "//opencannabisbase:ProductKey",
        "//opencannabismedia:MediaKey",
        "//opencannabistemporal:Instant",
        "//opencannabisproducts:Apothecary",
        "//opencannabisproducts:Cartridge",
        "//opencannabisproducts:Edible",
        "//opencannabisproducts:Extract",
        "//opencannabisproducts:Flower",
        "//opencannabisproducts:Merchandise",
        "//opencannabisproducts:Plant",
        "//opencannabisproducts:Preroll",
        "//opencannabisproducts:SKU",
        "//opencannabisproducts/menu:Menu",
        "//opencannabiscrypto/primitives:Integrity",
        "@com_google_protobuf//:field_mask_proto"],
    strip_import_prefix = "/opencannabis")

proto(
    name = "Policy",
    srcs = ["Policy.proto"],
    deps = [
        ":PolicyKey",
        "//opencannabiscore:Datamodel",
        "//opencannabisbase:ProductKind",
        "//opencannabistemporal:Instant",
        "//sources/private/models/identity:UserKey",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:struct_proto"],
    strip_import_prefix = "/opencannabis")

proto(
    name = "PolicyKey",
    srcs = ["PolicyKey.proto"],
    deps = [
        "//opencannabiscore:Datamodel",
        "//sources/private/models/partner:BrandKey",
        "//sources/private/models/partner:PartnerKey",
        "//sources/private/models/partner:LocationKey"],
    strip_import_prefix = "/opencannabis")


module(
    name = "opencannabis.catalog",
    deps = [":Catalog", ":Policy", ":PolicyKey"],
    strip_import_prefix = "/opencannabis")
