
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


# Commerce
proto(
    name = "Currency",
    srcs = ["Currency.proto"],
    strip_import_prefix = "/opencannabis")

proto(
    name = "Customer",
    srcs = ["Customer.proto"],
    deps = [
        "//opencannabisperson:Person",
        "//opencannabiscore:Datamodel"],
    strip_import_prefix = "/opencannabis")

proto(
    name = "Delivery",
    srcs = ["Delivery.proto"],
    deps = [
        "//opencannabisgeo:Address",
        "//opencannabiscore:Datamodel"],
    strip_import_prefix = "/opencannabis")

proto(
    name = "Discounts",
    srcs = ["Discounts.proto"],
    deps = ["//opencannabistemporal:Instant"],
    strip_import_prefix = "/opencannabis")

proto(
    name = "Item",
    srcs = ["Item.proto"],
    deps = [
        "//opencannabisbase:ProductKey",
        "//opencannabisstructs/pricing:PricingDescriptor"],
    strip_import_prefix = "/opencannabis")

proto(
    name = "Order",
    srcs = ["Order.proto"],
    deps = [
        ":Item",
        ":Delivery",
        ":Customer",
        "//opencannabiscommerce/payments:Payment",
        "//opencannabistemporal:Instant",
        "//opencannabiscore:Datamodel"],
    strip_import_prefix = "/opencannabis")

proto(
    name = "Purchase",
    srcs = ["Purchase.proto"],
    deps = [
        ":Item",
        ":Currency",
        ":Discounts",
        "//opencannabiscore:Datamodel",
        "//opencannabisaccounting:Taxes",
        "//opencannabiscrypto:Signature",
        "//opencannabiscommerce/payments:Payment",
        "//opencannabisinventory:InventoryProduct",
        "//opencannabistemporal:Instant"],
    strip_import_prefix = "/opencannabis")


module(
    name = "opencannabis.commerce",
    deps = [
        ":Currency",
        ":Customer",
        ":Delivery",
        ":Discounts",
        ":Item",
        ":Order",
        ":Purchase",
        "//opencannabiscommerce/payments:opencannabis.commerce.payments"],
    strip_import_prefix = "/opencannabis")
