
package(default_visibility = ["//visibility:public"])
load("//defs:proto.bzl", "proto", "module")


## Partner
proto(
    name = "EmailAddress",
    srcs = ["EmailAddress.proto"],
    deps = ["//opencannabiscore:Datamodel"],
    strip_import_prefix = "/opencannabis")

proto(
    name = "PhoneNumber",
    srcs = ["PhoneNumber.proto"],
    deps = ["//opencannabiscore:Datamodel"],
    strip_import_prefix = "/opencannabis")

proto(
    name = "Website",
    srcs = ["Website.proto"],
    deps = ["//opencannabiscore:Datamodel"],
    strip_import_prefix = "/opencannabis")

proto(
    name = "ContactInfo",
    srcs = ["ContactInfo.proto"],
    deps = [
        ":PhoneNumber",
        ":EmailAddress",
        ":Website",
        "//opencannabisgeo:Location",
        "//opencannabiscore:Datamodel"],
    strip_import_prefix = "/opencannabis")


module(
    name = "opencannabis.contact",
    deps = [
        ":EmailAddress",
        ":PhoneNumber",
        ":Website",
        ":ContactInfo"],
    strip_import_prefix = "/opencannabis")
